--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["command-line-utilities", "development-tools"]
 [dependencies]
 kalosm = { version = "0.4.0", features = ["language"] }
 tokio = { version = "1.47.0", features = ["full"] }
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4", features = ["serde"], default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 git2 = "0.19"
