--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,59 @@
 [package]
 name = "ai-code-buddy"
-version = "0.1.4"
+version = "0.3.0"
 edition = "2021"
 authors = ["Edgar H. Sanchez <esanchez@m2iab.com>"]
-description = "An AI-powered code review tool that analyzes Git repositories and provides intelligent feedback"
+description = "An AI-powered code review tool with elegant Bevy-based TUI"
 readme = "README.md"
 homepage = "https://github.com/edgarhsanchez/ai_code_buddy"
 repository = "https://github.com/edgarhsanchez/ai_code_buddy"
 license = "MIT"
-keywords = ["ai", "code-review", "git", "analysis", "cli"]
+keywords = ["ai", "code-review", "git", "analysis", "tui"]
 categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
+anyhow = "1.0.95"
+bevy = { version = "0.15", default-features = false, features = [
+    "bevy_state"
+] }
+bevy_ratatui = "0.7.0"
+bevy-tokio-tasks = "0.15.0"
+clap = { version = "4.0", features = ["derive", "env"] }
+color-eyre = "0.6.3"
+crossterm = "0.28.1"
+futures = "0.3.31"
+git2 = "0.19"
 kalosm = { version = "0.4.0", features = ["language"] }
-tokio = { version = "1.47.0", features = ["full"] }
-chrono = { version = "0.4", features = ["serde"], default-features = false }
+rat-cursor = "1.2.0"
+rat-event = "1.1.0"
+rat-focus = "0.31.0"
+ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
+regex = "1.11.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-git2 = "0.19"
-anyhow = "1.0"
-regex = "1.0"
-glob = "0.3"
-clap = { version = "4.0", features = ["derive"] }
-ratatui = "0.28"
-crossterm = "0.27"
+tokio = { version = "1.47.0", features = ["full"] }
+uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
+
+[features]
+default = ["auto-gpu"]
+# Auto-detect and enable GPU features
+auto-gpu = []
+# GPU acceleration features - these add the respective features to kalosm
+gpu-metal = ["kalosm/metal"]
+gpu-cuda = ["kalosm/cuda"] 
+gpu-mkl = ["kalosm/mkl"]
+
+[build-dependencies]
+# No additional dependencies needed for GPU detection
+
+# Enable a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.release]
+lto = true
+opt-level = 3
